Run laravel optimizations after deploy

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,4 +26,8 @@ jobs:
           healthcheck: https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/
           delay: 5 # Time (in seconds) to wait before performing healthcheck.
 
-      - run: heroku run cp .env.example .env
+      - name: Run production optimizations
+        run: |
+          heroku run php artisan route:cache
+          heroku run php artisan view:cache
+          heroku run php artisan config:cache
