--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "warmup": [
+           "@php artisan config:cache",
+           "@php artisan route:cache",
+           "@php artisan view:cache"
         ]
     },
     "extra": {
